# DummyBird

./: .README.md.swp  .gitignore  CMakeLists.txt  README.md
include/: attention.h  attention_gpu.h  composed_attention.h
src/: attention.cpp  attention_gpu.cu  attn.cpp  composed_attention.cpp
test/: test.cpp
utils/: CMakeLists.txt  helper.cpp  helper.h
